[package]
name = "jiragen"
version = "0.1.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>"]
edition = "2018"
repository = "https://github.com/Accruent/jiragen"

[dependencies]
csv = "^1.0"
failure = "^0.1"
http = "^0.1"
lazy_static = "^1.2"
regex = "^1.1"
reqwest = "^0.9"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[lib]
name = "jiragen"
path = "src/lib.rs"
